--- a/src/site.ejs
+++ b/src/site.ejs
@@ -18,16 +18,14 @@
 <body class="bg-white">
 
 
-<nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+<header id="header" class="bg-transparent transition duration-300 fixed w-full z-20 top-0 start-0">
+    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto py-10 px-8">
         <div>
             <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="./restlogo.png" class="h-8" alt="restcafe logo">
-
+                <img src="./restlogo.png" class="h-16" alt="restcafe logo">
             </a>
         </div>
         <div class="flex md:order-2 md:hidden space-x-3 md:space-x-0 rtl:space-x-reverse">
-
             <button data-collapse-toggle="navbar-sticky" type="button"
                     class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
                     aria-controls="navbar-sticky" aria-expanded="false">
@@ -41,35 +39,31 @@
         </div>
         <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
             <ul id="list-items-burger"
-                class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
                 <li>
                     <a href="#navb"
-                       class="block py-2 px-3 text-black bg-blue-700 rounded md:bg-transparent hover:text-blue-700 md:p-0 menu-button"
-                       aria-current="page" id="domu-button">Domů</a>
+                       class="block py-2 text-white px-3 rounded md:text-xl md:bg-transparent hover:text-red-700 md:p-0 menu-button"
+                       aria-current="page">Domů</a>
                 </li>
                 <li>
                     <a href="#about-us"
-                       class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700 menu-button"
-                       id="oNas">O nás</a>
+                       class="block py-2 text-white px-3 rounded md:text-xl md:hover:bg-transparent hover:text-red-700 md:p-0 menu-button"
+                       >O nás</a>
                 </li>
                 <li>
                     <a href="#nabidka-menu"
-                       class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700 menu-button"
-                       id="nabidka">Nabídka</a>
+                       class="block py-2 text-white px-3 rounded md:text-xl md:hover:bg-transparent hover:text-red-700 md:p-0 menu-button"
+                       >Nabídka</a>
                 </li>
                 <li>
                     <a href="#location"
-                       class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700 menu-button"
-                       id="kde-najit">Kde nás najdete?</a>
+                       class="block py-2 text-white px-3 rounded md:text-xl md:hover:bg-transparent hover:text-red-700 md:p-0 menu-button"
+                    >Kde nás najdete?</a>
                 </li>
             </ul>
-
-
         </div>
-
     </div>
-
-</nav>
+</header>
 
 
 <section class="bg-cover bg-center flex flex-col justify-center pt-9 min-h-screen md:w-full relative" id="navb"
@@ -78,7 +72,7 @@
     <header class="container relative items-center flex flex-col justify-center py-12 sm:pt-20">
         <h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold text-center text-white z-10">Welcome to Rest
             Caaafé</h1>
-        <p class="text-lg md:text-xl lg:text-2xl xl:text-3xl text-center mt-4 px-4 md:px-0 lg:w-1/2 xl:w-2/5 text-white z-10">
+        <p class="text-lg md:text-xl lg:text-2xl xl:text-3xl text-center mt-4 px-4 md:px-0 text-white z-10">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed euismod, nunc eget aliquet
             lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc. Sed euismod, nunc eget aliquet
             lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc.</p>
@@ -87,7 +81,6 @@
 
 
 <div class="max-w-screen-xl mx-auto px-4 mt-10 md:mt-14 lg:mt-20 justify-center items-center">
-
     <!-- KDO JSME? -->
     <section class="py-2" id="about-us">
         <!-- HEADING -->
@@ -154,8 +147,6 @@
         </div>
 
     </section>
-
-
 </div>
 
 
@@ -353,6 +344,7 @@
     </section>
 </div>
 
+
 <section class="bg-gradient-to-r from-red-800 to-red-600 pt-16 pb-7 mt-10 md:mt-14 container lg:mt-20 relative overflow-hidden" id="reviews">
     <div class="max-w-7xl mx-auto px-4">
         <h2 class="text-3xl font-bold mb-4 text-center text-white">Naše hodnocení</h2>
@@ -463,26 +455,6 @@
         </a>
     </div>
 </section>
-
-<section class="max-w-screen-xl mx-auto px-6">
-    <h1 class="text-3xl font-bold mb-4">Instagram Photos</h1>
-    <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mx-auto">
-        <% imageData.slice(0, 8).forEach(image => { %>
-            <li class="relative">
-                <div class="overflow-hidden rounded-lg shadow-lg">
-                    <a href="<%= image.permalink %>" target="_blank" class="block">
-                        <img src="<%= image.media_url %>" alt="<%= image.caption %>"
-                             class="w-full h-full transition duration-300 transform hover:scale-105">
-                        <div class="absolute top-0 left-0 w-full h-full bg-white opacity-0 hover:opacity-75 flex items-center justify-center text-black text-opacity-100 hover:text-opacity-100 transition duration-300">
-                            <p class="text-center p-4"><%= image.caption %></p>
-                        </div>
-                    </a>
-                </div>
-            </li>
-        <% }); %>
-    </ul>
-</section>
-
 
 <footer class="bg-gradient-to-r from-red-800 to-red-600 mt-10 md:mt-14 lg:mt-20">
     <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
